fix: input height jump

--- a/src/ui/style/index.less
+++ b/src/ui/style/index.less
@@ -101,6 +101,13 @@ button:focus {
       color: #2D3033;
     }
   }
+  .icon-checked {
+    width: 16px;
+    height: 16px;
+  }
+  .ant-input-affix-wrapper {
+    line-height: 1;
+  }
 }
 
 .walletconnect-modal {
